--- a/v3.html
+++ b/v3.html
@@ -119,7 +119,11 @@ Like Baskerville, Mrs Eaves, cut by Zuzana Licko of Émigré, has a near vertica
 
 
 
-<footer>The content on this page is developed from original copy from Wikipedia and licensed under a Creative Commons Attribution-ShareAlike License, meaning you’re allowed to copy, distribute and transmit the work as long as it is attributed to the original authors.</footer>
+        <footer>
+            <small>The content on this page is developed from original copy from Wikipedia and licensed under a Creative Commons Attribution-ShareAlike License, meaning you’re allowed to copy, distribute and transmit the work as long as it is attributed to the original authors.</small>
+            <a href="htttp://stuart,mcmaw.github.io" title="View my personal website">HTML by                   Stuart McMaw</a>
+            <a hred="mailtop:McMaw-s1@email.ulster.ac.uk" title="Feel free to send me an email">Get             in touch</a>
+        </footer>
 
 </body>
 
