added style to nav

--- a/v5.html
+++ b/v5.html
@@ -17,13 +17,13 @@
             <h2>Letter Founder & Master Printer</h2>
         </hgroup>
         
-  <!--      <nav>
+        <nav>
             <ul>
                 <li><a href="#the-man">The Man</a></li>
                 <li><a href="#the-typeface">The Typeface</a></li>
                 <li><a href="#mrs-eaves">Mrs Eaves</a></li>
             </ul>
-        </nav> -->
+        </nav>
     </header>
 
 <section><!-- John Baskerville -->
