--- a/v6.html
+++ b/v6.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <link href='https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic' rel='stylesheet' type='text/css'>
-<link href="css/style.css" rel="stylesheet">
+<link href="css/style03.css" rel="stylesheet">
 <title>John Baskerville</title>
     
 </head>
